--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -4,7 +4,6 @@
   background-size: cover;
   background-position: center;
   background-color: rgba($brand-color, 0.5);
-  background-blend-mode: luminosity;
 
   &:before {
       content: "";
